@@ -52,19 +52,19 @@ public:
   virtual ~TAO_Client_Strategy_Factory (void);
 
   /// Create the correct client request muxing strategy.
-  virtual TAO_Transport_Mux_Strategy *create_transport_mux_strategy (TAO_Transport *transport);
+  virtual TAO_Transport_Mux_Strategy *create_transport_mux_strategy (TAO_Transport *transport) = 0;
 
   /// Create the correct lock for request muxing strategy.
-  virtual ACE_Lock *create_transport_mux_strategy_lock (void);
+  virtual ACE_Lock *create_transport_mux_strategy_lock (void) = 0;
 
   /// Return the size of the reply dispatcher table
-  virtual int reply_dispatcher_table_size (void) const;
+  virtual int reply_dispatcher_table_size (void) const = 0;
 
   /// Create the correct client <wait_for_reply> strategy.
-  virtual TAO_Wait_Strategy *create_wait_strategy (TAO_Transport *transport);
+  virtual TAO_Wait_Strategy *create_wait_strategy (TAO_Transport *transport) = 0;
 
   /// Create the correct client <asynch_connect> strategy.
-  virtual TAO_Connect_Strategy *create_connect_strategy (TAO_ORB_Core *);
+  virtual TAO_Connect_Strategy *create_connect_strategy (TAO_ORB_Core *) = 0;
 
   enum Connect_Strategy
   {
@@ -73,16 +73,16 @@ public:
     TAO_LEADER_FOLLOWER_CONNECT
   };
   /// Return the selected connection strategy option.
-  virtual Connect_Strategy connect_strategy (void) const;
+  virtual Connect_Strategy connect_strategy (void) const = 0;
 
   /// Does the client allow any form of callback?
-  virtual int allow_callback (void);
+  virtual int allow_callback (void) = 0;
 
   /// Cleanup options for wait strategy.
   /**
     * Only applicable to RW wait strategy
   */
-  virtual bool use_cleanup_options (void) const;
+  virtual bool use_cleanup_options (void) const = 0;
 };
 
 TAO_END_VERSIONED_NAMESPACE_DECL
